# simple_controller_variant

./: README.md
custom_robot_msgs/: CMakeLists.txt
custom_robot_msgs/msg/: RobotCommandMsgs.msg
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/custom_robot_msgs/share/custom_robot_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/target_pid_controller/share/target_pid_controller/: package.bash  package.ps1  package.sh  package.xml  package.zsh
install/target_pid_controller/share/target_pid_controller/config/: target_pid_controller.yaml  target_pid_controller_params.yaml
install/target_pid_controller/share/target_pid_controller/launch/: target_controller_launch.py  target_controller_sim_launch.py
log/: latest_build
pure_pursuit/: setup.py
pure_pursuit/config/rviz/: purepursuit_rviz2.rviz
pure_pursuit/launch/: purepursuit_launch.py  purepursuit_movement_launch.py
pure_pursuit/pure_pursuit/: test_purepursuit_node.py  variable_speed_node.py
target_pid_controller/: setup.cfg  setup.py
target_pid_controller/config/: target_pid_controller.yaml
target_pid_controller/config/rviz/: target_controller_rviz2.rviz
target_pid_controller/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
target_pid_controller/launch/: target_controller_launch.py
target_pid_controller/log/: latest_build
target_pid_controller/target_pid_controller/: Video.py  pid_controller_node.py  pid_controller_node_sub.py  robot_params.msg  tf_updater_node.py
target_pid_controller/target_pid_controller/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
target_pid_controller/target_pid_controller/log/: latest_build
(+71 files in other folders)
